@@ -1,5 +1,10 @@
 Mon May  7 15:58:45 2001  Yukihiro Matsumoto  <matz@ruby-lang.org>
 
+	* parse.y (arg): "||=" should not warn for uninitialized instance
+	  variables.
+
+	* eval.c (rb_eval): ditto.
+
 	* eval.c (eval): preserve and restore ruby_cref as well.
 
 Mon May  7 15:45:48 2001  WATANABE Hirofumi  <eban@ruby-lang.org>
